.sourceManifests/resume/pdf-converter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdf-converter
  labels:
    app.kubernetes.io/name: pdf
    app.kubernetes.io/component: converter
    app.kubernetes.io/instance: resume-johndoe
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pdf
      app.kubernetes.io/component: converter
      app.kubernetes.io/instance: resume-johndoe
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pdf
        app.kubernetes.io/component: converter
        app.kubernetes.io/instance: resume-johndoe
    spec:
      containers:
      - name: pdf-converter
        image: ghcr.io/jefedavis/resume-pdf-converter:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pdf-converter-svc
  labels:
    app.kubernetes.io/name: pdf
    app.kubernetes.io/component: converter
    app.kubernetes.io/instance: resume-johndoe

spec:
  selector:
    app.kubernetes.io/name: pdf
    app.kubernetes.io/component: converter
    app.kubernetes.io/instance: resume-johndoe
  ports:
  - port: 3000
    targetPort: 3000
