.sourceManifests/resume/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume-service
spec:
  selector:
    resume.jefedavis.dev/candidate: johndoe
  ports:
  - port: 8080
    targetPort: 1313
